# Real-Engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/backpack/: Backpack.json  imgui.ini
assets/bloody_floor/: Floor.json  imgui.ini
assets/cube/: license.txt  scene.gltf
assets/icons/windows/: app.rc
assets/textures/skybox/: Skybox.json
lib/MikkTSpace/: CMakeLists.txt
lib/assimp/include/assimp/: revision.h
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/imgui/: CMakeLists.txt
lib/tinygltf/: CMakeLists.txt
modules/common/: CMakeLists.txt  Clock.h  Common.h  GlmUtils.h  LRU.h  Logger.cpp  Logger.h  MathCore.h  MathTypes.h  Passkey.h  Sharable.h  StaticArray.h  Stopwatch.h  UnorderedVector.h
modules/common/containers/: StaticArray.h
modules/ecs/: CMakeLists.txt  ComponentView.h  Coordinator.h  Core.h  EntitySpawner.h  IComponentArray.h  IEntitiesBroker.h  System.h  Utils.h
modules/ecs/impl/: ComponentArray.h  ComponentManager.h  Coordinator.cpp  CoordinatorImpl.h  EntityManager.cpp  EntityManager.h  IComponentArray.h  SystemManager.h
modules/events/: CMakeLists.txt  Core.h  Event.h  EventsManager.cpp  EventsManager.h
shaders/: Basic.fs  Basic.vs  BloomBlur.frag  BloomDownsample.fs  DebugDepth.fs  DebugDepth.vert  DebugDepth.vs  Depth.frag  Depth.fs  Depth.vert  Depth.vs  EquirectangularToCubemap.frag  EquirectangularToCubemap.vert  Grid.frag  Grid.vert  IrradianceConvolution.frag  IrradianceConvolution.vs  Output.fs  PBR.fs  PBR.vert  PBR.vs  PostProcess.frag  PostProcess.fs  PostProcess.vert  Skybox.fs  Skybox.vert  TAA.frag  TAA.fs  TAA.vert  Wireframe.fs  Wireframe.vs  basic.fs  basic.vs  debug_depth.vs  default.fs  default.vs  depth.fs  depth.vs  indir.fs  indir.vs  (+7 more)
src/: Main.cpp  Shared.h  pch.h
src/assets/: Model.cpp  Model.h  ModelData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureParams.h  TinyGLTFParseStrategy.cpp  TinyGLTFParseStrategy.h
src/ecs/: CommonECS.h  ComponentArray.h  ComponentManager.h  Components.cpp  Components.h  ComponentsFactory.cpp  ComponentsFactory.h  Coordinator.h  EntityBuilder.h  EntityManager.cpp  EntityManager.h  EntityType.h  SystemManager.h  Systems.cpp  Systems.h
src/ecs/factories/: CollisionComponentFactory.cpp  EnvironmentComponentFactory.cpp  ModelComponentFactory.cpp  SkyboxComponentFactory.cpp
src/ecs/systems/: CollisionRenderSystem.cpp  CollisionRenderSystem.h  EnvironmentRenderSystem.cpp  EnvironmentRenderSystem.h  LightingSystem.cpp  LightingSystem.h  ModelRenderSystem.cpp  ModelRenderSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ShadowRenderSystem.cpp  ShadowRenderSystem.h  SkyboxRenderSystem.cpp  SkyboxRenderSystem.h  WorldRenderSystem.cpp  WorldRenderSystem.h
src/editor/: EditorUI.cpp  EditorUI.h
src/editor/components/: ComponentDataWindow.cpp  ComponentDataWindow.h  EditorWIndow.h  EntitiesWindow.cpp  EntitiesWindow.h  GizmoRenderer.cpp  GizmoRenderer.h  GlobalParamsWindow.cpp  GlobalParamsWindow.h  MenuBar.cpp  MenuBar.h  OverviewWindow.cpp  OverviewWindow.h  PerformanceWindow.cpp  PerformanceWindow.h  SceneWindow.cpp  SceneWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/editor/platform/: SysUtils.h  SysUtils_Unix.cpp  SysUtils_Windows.cpp
src/editor/renderer/: CollisionComponentRenderer.cpp  CollisionComponentRenderer.h  ComponentRenderer.cpp  ComponentRenderer.h  LightComponentRenderer.cpp  LightComponentRenderer.h  ModelComponentRenderer.cpp  ModelComponentRenderer.h  NameComponentRenderer.cpp  NameComponentRenderer.h  RendererConcept.h  SkyboxComponentRenderer.cpp  SkyboxComponentRenderer.h  TransformComponentRenderer.cpp  TransformComponentRenderer.h
src/engine/: Camera.cpp  Camera.h  Config.cpp  Config.h  Display.cpp  Display.h  Engine.cpp  Engine.h  Events.h  InputManager.cpp  InputManager.h  MathCore.h  MathTypes.h  Passkey.h  ResourceManager.cpp  ResourceManager.h  World.cpp  World.h
src/events/: Event.h  Events.h  EventsManager.cpp  EventsManager.h
src/glad/: glad.c  glad.h
src/graphics/: Buffer.h  Cubemap.cpp  Cubemap.h  GLRenderer.cpp  GLRenderer.h  Model.cpp  Model.h  ModelData.h  ModelLoader.cpp  ModelLoader.h  RenderTypes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderTypes.h  Texture.cpp  Texture.h  TextureBase.cpp  TextureBase.h  TextureParams.h  TinyGLTFParseStrategy.cpp  TinyGLTFParseStrategy.h
src/interfaces/: Asset.h  EventsListener.h  FrameDataCollector.h  GeneratableTexture.h  Identifiable.h  InputHandler.h  ModelParseStrategy.h  RenderCollector.h  RenderPass.h  RenderPipeline.h  Renderable.h  Renderer.h  Serializable.h  Sharable.h  Shutdownable.h  TextureAsset.h  Transformatable.h  Updateable.h  WorldEditor.h
src/physics/: Collision.h
src/platform/: SysUtils.h  SysUtils_Unix.cpp  SysUtils_Windows.cpp
src/render/: Buffer.h  FrameContext.h  FrameData.h  GLRenderer.cpp  GLRenderer.h  RenderCommand.h  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  RenderQueue.h  RenderTarget.h  RenderTypes.h  ShaderTypes.cpp  ShaderTypes.h
src/render/passes/: BloomRenderPass.cpp  BloomRenderPass.h  CollisionRenderPass.cpp  CollisionRenderPass.h  EquirectangularToCubemapPass.cpp  EquirectangularToCubemapPass.h  GridRenderPass.cpp  GridRenderPass.h  IrradianceConvolutionPass.cpp  IrradianceConvolutionPass.h  OpaqueRenderPass.cpp  OpaqueRenderPass.h  OutputRenderPass.cpp  OutputRenderPass.h  PostProcessRenderPass.cpp  PostProcessRenderPass.h  RenderPassTypes.h  ShadowRenderPass.cpp  ShadowRenderPass.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h  TAARenderPass.cpp  TAARenderPass.h  TransparentRenderPass.cpp  TransparentRenderPass.h
src/scenes/: World.cpp  World.h
src/ui/: EditorUI.cpp  EditorUI.h
src/utils/: Clock.h  Common.h  Event.cpp  Event.h  Image.cpp  Image.h  Json.h  Logger.cpp  Logger.h  Math.h  Path.cpp  Path.h  Resource.cpp  Resource.h  StaticArray.h  Stopwatch.h  UnorderedVector.h
src/utils/impl/: EventImpl.h
